modules/SG/main.tf
resource "aws_security_group" "MyVPCSG" {
    name = var.SGname
    description = "My VPC Security Group"
    vpc_id = var.vpc_id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = var.cidr_block
  
   }
   
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = var.cidr_block
  
   }
   ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = var.cidr_block
  
   }
   ingress {
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = var.cidr_block
  
   }
   ingress {
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        cidr_blocks = var.cidr_block
  
   }
   
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = var.cidr_block
  
   }
}
